--- a/.tekton/kubearchive-12345-push.yaml
+++ b/.tekton/kubearchive-12345-push.yaml
@@ -68,7 +68,7 @@ spec:
       description: Default base image for ko
       name: default-base-image
       type: string
-    - default: ""
+    - default: "quay.io/rh-ee-blindner-testing/user-ns1/kubearchive-12345"
       description: Setting for KO_DOCKER_REPO
       name: ko-docker-repo
       type: string
